--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   padding: 5px;
   max-width: 560px;
   color: #444;
+  font-family: 'Alata', sans-serif;
 }
 
 h1 {
@@ -20,6 +21,17 @@ button {
   background-color: #eee;
   font-size: 1.1em;
   border-radius: 4px;
+  font-family: 'Alata', sans-serif;
+  padding: 5px;
+  margin: 5px;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+input {
+  font-family: 'Alata', sans-serif;
 }
 
 @media screen and (min-width: 460px) {
