--- a/src/App.css
+++ b/src/App.css
@@ -9,25 +9,38 @@
 }
 
 h1 {
-  color: #666;
+  color: black;
 }
 
 h2 {
-  color: #333;
+  color: #444;
 }
 
 button {
-  border: 1px solid #aaa;
+  border: 1px solid #bbb;
   background-color: #eee;
+  background: none;
   font-size: 1.1em;
-  border-radius: 4px;
+  color: #444;
   font-family: 'Alata', sans-serif;
-  padding: 5px;
+  padding: 10px;
   margin: 5px;
 }
 
 button:hover {
   cursor: pointer;
+  color: black;
+  border-color: black;
+}
+
+a:link,
+a:active,
+a:visited {
+  color: #444;
+}
+
+a:hover {
+  color: black;
 }
 
 textarea, 
